Fix content spacing

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -19,4 +19,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
